<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="gr.academic.city.sdmd.advanceduitoolbox.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pizza_app"
        android:textStyle="bold"
        android:textSize="20sp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cheese"
        android:checked="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tomatoes" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <!-- The ID is necessary so the RadioGroup can distinguish the buttons -->
        <RadioButton android:id="@+id/rb_pick_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_up"
            android:checked="true" />

        <!-- If the ID is not provided the RadioGroup won't be able to uncheck the rest of the buttons -->
        <RadioButton android:id="@+id/rb_delivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_delivery" />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pay_with_credit_card"/>

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/yes"
        android:textOff="@string/no"
        android:checked="true" />
</LinearLayout>
